# AI_Voice

./: .editorconfig  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  README.md  UNUSED_FILES_ANALYSIS.md  cspell.config.mts  cspell.json  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json
.changeset/: README.md  config.json
.cspell/: project-words.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docs.yml  release.yml
.trae/documents/: docs-ci-cd-integration-plan.md  docs-ci-cd-resume-plan.md  docs-verify-and-complete.md  docs-verify-and-validate.md  skills-mcp-e2e-and-frontend-plan.md  skills-mcp-resume-chat-tests.md  全面重构执行计划.md  全面重构方案.md  重构剩余执行计划.md  重构收尾执行计划-v2.md  重构收尾执行计划-v3.md  (+2 more)
agents/: .env.example  README.md  mkdocs.yml  pyproject.toml
agents/docs/: api.md  architecture.md  index.md
agents/src/: decomposer.py  executor.py  json_utils.py  logger.py  orchestrator.py  prompt_architect.py  runner.py  tools.py  worker.py
agents/src/mcp_client/: __init__.py  client.py
agents/src/memory/: __init__.py  embeddings.py  manager.py  vector_store.py
agents/src/models/: provider.py
agents/src/prompts/: __init__.py  capabilities.py  identity.py  system.py  tools.py
agents/src/skills/: __init__.py  registry.py
agents/tests/: __init__.py  test_e2e.py  test_models.py  test_skills.py  test_tools.py  test_worker_modes.py
docker/: docker-compose.yml
docs-landing/: index.html
scripts/: verify-docs.sh
(+91 files in other folders)
