[project]
name = "agent-engine"
version = "1.0.0"
requires-python = ">=3.12,<3.15"
dependencies = [
  "langchain==1.3.11",
  "langgraph==1.2.6",
  "langgraph-checkpoint==4.1.1",
  "langchain-core==1.4.8",
  "langchain-openai==1.3.3",
  "langchain-anthropic==1.4.8",
  "langchain-ollama==1.1.0",
  "deepagents>=0.6.12",
  "pydantic>=2.13.4",
  "httpx==0.28.1",
  "qdrant-client==1.18.0",
  "redis==8.0.1",
  "sentence-transformers==5.6.0",
  "pillow==12.2.0",
  "structlog==26.1.0",
  "mcp>=1.12.0",
]

[dependency-groups]
dev = [
  "pytest>=9.1.1",
  "pytest-asyncio>=1.4.0",
  "ruff>=0.15.20",
  "mypy>=2.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
[tool.mypy]
python_version = "3.12"
strict = true
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[pip]
link-mode = "copy"
